--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <style src="style.css"></style>
-  <title>JS Bin</title>
+  <link rel="stylesheet" href="style.css" type="text/CSS" />
 </head>
 <div id="container">
-  <body id="containerCanvas">
-    <h3>Conway's game of life</h3>
-    <canvas id="gameCanvas">
+
+  <body id="body">
+    <div id="textContainer">
+      <h3 id="heading">Conway's game of life</h3>
+    </div>
+    <div class="canvasDiv">
+      <canvas id="gameCanvas">
+    </div>
+    <h3>rules:</h3>
+    <p>Any live cell with fewer than two live neighbours dies, as if by underpopulation.</p>
+    <p>Any live cell with two or three live neighbours lives on to the next generation.</p>
+    <p>Any live cell with more than three live neighbours dies, as if by overpopulation.</p>
     <script src="script.js"></script>
-  </body> 
+  </body>
 </div>
+
 </html>
