add generation count

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="canvasDiv">
       <canvas id="gameCanvas">
     </div>
+    <h4>generation: <span id="generation">0</span></h4>
     <h3>rules:</h3>
     <p>Any live cell with fewer than two live neighbours dies, as if by underpopulation.</p>
     <p>Any live cell with two or three live neighbours lives on to the next generation.</p>
