change to generate with button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     <div class="canvasDiv">
       <canvas id="gameCanvas">
     </div>
+    <!-- <button id="run">run</button>
+    <button id="stop">stop</button> -->
+    
     <h4>generation: <span id="generation">0</span></h4>
+    <h4>population: <span id="population">0</span></h4>
+    <button id="run">next gen</button>
+    <button id="stop">stop</button>
     <h3>rules:</h3>
     <p>Any live cell with fewer than two live neighbours dies, as if by underpopulation.</p>
     <p>Any live cell with two or three live neighbours lives on to the next generation.</p>
