increase size and add setInterval

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     
     <h4>generation: <span id="generation">0</span></h4>
     <h4>population: <span id="population">0</span></h4>
-    <button id="run">next gen</button>
+    <button id="run">></button>
+    <button id="repeat">>></button>
     <button id="stop">stop</button>
     <h3>rules:</h3>
     <p>Any live cell with fewer than two live neighbours dies, as if by underpopulation.</p>
